# schiffe_versenken

./: .gitignore  Cargo.toml
.cargo/: config.toml
src/: bit_board.rs  board.rs  cell_grid.rs  main.rs  ship.rs  ship_counts.rs
