[package]
name = "schiffe_versenken"
version = "0.1.0"
edition = "2024"

[dependencies]
num-format = "0.4.4"
rand = { version = "0.8.5", features = [
    "small_rng",
    "std",
    "std_rng",
], default-features = false }


rayon = { version = "1.10.0", optional = true }
# rayon = "1.10.0"


[profile.release]
# opt-level = 3
# incremental = true
# lto = "fat"

opt-level = 3
# lto = "fat"
# codegen-units = 1
# panic = "abort"
# strip = true
debug = 2


# inherits = true
# debug-assertions = true
# overflow-checks = true
# split-debuginfo = "unpacked"
# debug = 0

[profile.release.build-override]
# opt-level = 3

[features]
default = ["rayon", "print_formatting"]
rayon = ["dep:rayon"]
print_formatting = []
panic = []
debug_assert = []
overflow = []
